Display the force components at P1 and P2.
Updated the HTML to:
- Add a new section for displaying forces at anchor points
- Improve the layout with headers and better organization
- Group related information in an info panel

Enhanced the CSS to:
- Style the new force component displays
- Improve the overall layout and readability
- Add subtle shadows and better spacing

Modified the JavaScript to:
- Calculate force components (f1x, f1y, f2x, f2y) at P1 and P2
- Display forces in vector notation (i, j components)
- Handle edge cases (like division by zero)

The forces are now displayed in vector notation (i and j components), where:
- i represents the horizontal (x) component
- j represents the vertical (y) component

The forces shown at P1 and P2 are the forces that the cables exert on these points.
Note that these forces are equal in magnitude to the tension but opposite in direction to the cable.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
         <h1>WebTension Simulation</h1>
         <div class="simulation-container">
             <canvas id="tensionCanvas"></canvas>
-            <div id="coordinates">
-                <div>P1: <span id="p1-coords"></span></div>
-                <div>P2: <span id="p2-coords"></span></div>
-                <div>P3: <span id="p3-coords"></span></div>
-            </div>
-            <div id="forces">
-                <div>T1: <span id="tension1"></span></div>
-                <div>T2: <span id="tension2"></span></div>
-                <div>Force on P3: <span id="force3"></span></div>
+            <div class="info-panel">
+                <div id="coordinates">
+                    <h3>Coordinates</h3>
+                    <div>P1: <span id="p1-coords"></span></div>
+                    <div>P2: <span id="p2-coords"></span></div>
+                    <div>P3: <span id="p3-coords"></span></div>
+                </div>
+                <div id="forces">
+                    <h3>Forces</h3>
+                    <div>T1: <span id="tension1"></span></div>
+                    <div>T2: <span id="tension2"></span></div>
+                    <div>Force on P3: <span id="force3"></span></div>
+                    <h4>Forces at Anchor Points</h4>
+                    <div>P1 Force: <span id="p1-force"></span></div>
+                    <div>P2 Force: <span id="p2-force"></span></div>
+                </div>
             </div>
         </div>
         <div class="controls">
