--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="info-panel">
                 <div id="coordinates">
                     <h3>Coordinates</h3>
+                    <div>P0: <span id="p0-coords"></span></div>
                     <div>P1: <span id="p1-coords"></span></div>
                     <div>P2: <span id="p2-coords"></span></div>
                     <div>P3: <span id="p3-coords"></span></div>
@@ -23,9 +24,15 @@
                     <div>T1: <span id="tension1"></span></div>
                     <div>T2: <span id="tension2"></span></div>
                     <div>Force on P3: <span id="force3"></span></div>
-                    <h4>Forces at Anchor Points</h4>
+                    <h4>Forces at Points</h4>
                     <div>P1 Force: <span id="p1-force"></span></div>
                     <div>P2 Force: <span id="p2-force"></span></div>
+                </div>
+                <div id="torques">
+                    <h3>Torques about P0</h3>
+                    <div>Due to P1: <span id="torque1"></span></div>
+                    <div>Due to P2: <span id="torque2"></span></div>
+                    <div>Net Torque: <span id="net-torque"></span></div>
                 </div>
             </div>
         </div>
