feat: Add localStorage persistence, URL state sharing, and reset button
State (point coordinates, force magnitude/direction) is auto-saved to
localStorage on every user change and encoded into URL query parameters
via replaceState. On page load, URL params take priority over
localStorage, which takes priority over hardcoded defaults. A Reset to
Defaults button appears when any value differs from defaults.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>WebTension Simulation</h1>
+        <div class="title-row">
+            <h1>WebTension Simulation</h1>
+            <button id="resetDefaults" class="reset-btn hidden">Reset to Defaults</button>
+        </div>
         <div class="simulation-container">
             <canvas id="tensionCanvas"></canvas>
             <div class="info-panel">
