feat: Add toggleable X/Y axis overlay on canvas
When enabled, draws light gray axis lines through the origin with labels and tick marks every 50 units.
A Show/Hide Axes button toggles the display. The axes visibility state
is persisted in localStorage and URL parameters alongside other settings.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </div>
         </div>
         <div class="controls">
+            <button id="toggleAxes" class="toggle-btn">Show Axes</button>
             <label>Force Magnitude:
                 <div class="slider-row">
                     <input type="range" id="forceMagnitude" min="0" max="100" value="50">
